# coggerator

./: .gitignore  LICENSE.md  README.md  environment.yml  package.json  tailwind.config.cjs  tsconfig.json  version_info.json
.github/workflows/: test-on-pr.yml
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs  options.rs
src-tauri/src/options/: big_tiff.rs  compression.rs  overviews.rs  resampling.rs
src/lib/: FilePicker.svelte  Form.svelte  Layout.svelte  Select.svelte
