[package]
name = "coggerator"
version = "0.0.0"
description = "Cloud Optimize your GeoTIFF files"
authors = ["Taylor Denouden <taylor.denouden@hakai.org>"]
license = "MIT"
repository = "https://github.com/HakaiInstitute/coggerator"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["dialog-all", "notification-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gdal = "0.14.0"
thiserror = "1.0.39"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
