[package]
name = "coggerator"
version = "0.1.3"
description = "Cloud Optimize your GeoTIFF files"
authors = ["Taylor Denouden <taylor.denouden@hakai.org>"]
license = "MIT"
repository = "https://github.com/HakaiInstitute/coggerator"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog-all", "notification-all", "path-all", "shell-open", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gdal = "0.15.0"
thiserror = "1.0.39"
strum = "0.25.0"
strum_macros = "0.25.0"
tempfile = "3.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
